# famdeck-relay

./: .mcp.json  CLAUDE.md  README.md  index.ts  openclaw.plugin.json  package.json
.beads/: metadata.json
.claude/: atlas.yaml  relay.yaml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
.serena/: project.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agents/: context-gatherer.md  coordinator.md  router.md
cli/: adapters.py  bmad.py  codeman.py  config.py  importer.py  main.py  models.py  routing.py  sync.py
evals/: messaging-evals.json  messaging-trigger-eval.json
hooks/: hooks.json
hooks/scripts/: register-provider.py
knowledge/: beads-integration.md  handoff-protocol.md  messaging-protocol.md  relay-config-schema.md  routing-rules.md  tracker-adapters.md
mcp-server/: pyproject.toml
mcp-server/src/relay_mcp/: server.py
messaging-workspace/iteration-1/: benchmark.json  benchmark.md
messaging-workspace/iteration-3/: benchmark.json
openclaw-skills/handoff/: SKILL.md
openclaw-skills/messaging/: SKILL.md
openclaw-skills/pickup/: SKILL.md
openclaw-skills/relay/: SKILL.md
skills/bmad-import/: SKILL.md
skills/coordination/: SKILL.md
skills/handoff/: SKILL.md
skills/issue/: SKILL.md
spec/: ADAPTERS.md  ARCHITECTURE.md  HANDOFF.md  MESSAGING.md  ROUTING.md  SKILLS.md
tests/: test_adapters.py  test_bmad.py  test_codeman.py  test_config_defaults.py  test_importer.py  test_models.py  test_sync.py  test_sync_transactional.py
(+52 files in other folders)
