[project]
name = "relay-mcp"
version = "0.1.0"
description = "Relay issue routing MCP server"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.0.0", "pyyaml>=6.0"]

[project.scripts]
relay-mcp = "relay_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
